phrase week 30 November

--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,5 +1,12 @@
 = DW
 
+== Woche 30 November 2020
+
+* Meinst du, ich soll wirklich bei diesem Unternehmen bewerben? - Do you think I should really apply to this company?
+
+
+
+---------------------
 * Marie mag keinen Kaffee.
 
 * Das schaffe ich mit links - I can do that with my left hand
@@ -7,4 +14,12 @@
 * Ich glaube, der Laden ist heute geschlossen - I think the store is closed today.
 
 * Durch die Klimaerwärmung steht die Zukunft useres Planeten auf dem Spiel - The future of our planet is at stake due to global warning.
+* Kannst du die Flasche auf den Tisch da vorne stellen - Can you put the bottle on the table over there
+
+* Nächste Woche habe ich sehr viel zu tun. Deswegen kann ich noch nicht sagen, ob ich es schaffe, dich zu treffen. - I will be very busy next week. That is why I can not say wheather I will be able to meet you.
+
+* Ich mag es gar nicht, wenn du traurig bist. - I do not like it when you are sad.
+
+---------------------
+
 
