--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -6,7 +6,38 @@
 
 
 
----------------------
+== Tag 28 November 2020
+
+* Henriette liebt das Buch, das sie von ihrer Mutter geschenkt bekommen hat. - Henriette loves the book that her mother gave her.
+
+* Sie liebt ihn gar nicht, sodern ist nur auf sein Geld aus! - She doesn't love him at all, but is only after his money!
+
+* Ich bin am liebsten draußen, wenn die Sonne scheint. - I prefer to be outside when the sun is shining.
+
+* Kannst du das bitte noch einmal widerholen? Er ist so laut hier. - Can you please repeat that again? He's so loud here.
+
+* Ich kann es kaum erwarten, bald wieder zu Hause zu sein! - I can not wait, soon to be home again!
+
+* Hast du schon die Rechnung bezahlt? - Have you paid the bill yet?
+
+
+== Tag 27.11.2020
+
+* Ich muss mich beeilen, weil ich heute pünktlich gehen will - I have to hurry because I want to leave on time today
+
+* Ich gehe gerne zu Fuß - I like to walk
+
+* Ich finde die Argumente des Politikers überzeugt - I find the politician's arguments convincing
+
+* Im Schnitt mache ich zwei bis dreimal die Woche Sport. - On average, I do sport two to three times a week.
+
+* Darfst du einfach so früh Feierabend machen? -  Can you just quit work so early?
+
+* Jetzt hilf mir doch mal! - Now help me out!
+
+
+
+
 * Marie mag keinen Kaffee.
 
 * Das schaffe ich mit links - I can do that with my left hand
