--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,10 +1,26 @@
 = DW
 
-== Woche 30 November 2020
+== Tag 1.12.2020
+
+* Ich wünsche mir so sehr, dass es in diesem Winter schneit. - I wish so much that it snows this winter.
+
+* Ich komme aus der Schweiz. Und du? - I come from Switzerland. And you?
+
+* Können wir in deiner Mittagspauze kurz sprechen? - Can we talk briefly during your lunch break?
+
+== Tag 30 November 2020
 
 * Meinst du, ich soll wirklich bei diesem Unternehmen bewerben? - Do you think I should really apply to this company?
 
+* Wie geht's dir heute? Schon etwas besser danke. - How are you today? Already a little better thanks.
 
+* Geduld ist nicht unbedingt eine meiner Stärken - Patience is not necessarily one of my strengths.
+
+* Ich vermisse dich! - I miss you
+
+* Meine Mutter kocht immer etwas für mich, wenn ich aus der Schule komme.
+
+* Marrie mag keinen Kaffee.
 
 == Tag 28 November 2020
 
