--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,5 +1,19 @@
 = DW
 
+== Tag 2.12.2020
+
+* Heute ist ein schöner tag! - Today is a nice day!
+
+* Die beiden haben gerade eine kleine Krise. Hoffentlich wird es bald wieder besser. - The two are in a little crisis. Hopefully it will get better soon.
+
+* Wollen wir uns heute Abend um 19 Uhr treffen?
+
+* Es tut mir leid. Kannst du mir jemals vergeben? - I'm so sorry. Can you ever forgive me
+
+* Als kind wollte ich immer eine Lehrerin werden.
+
+* Kannst du mir noch eben helfen, den Tisch abräumen. - Can you help me clear the table?
+
 == Tag 1.12.2020
 
 * Ich wünsche mir so sehr, dass es in diesem Winter schneit. - I wish so much that it snows this winter.
