--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,5 +1,20 @@
 = DW
 
+== Tag 5.12.2020
+
+
+* Der Reporter hat über das Geschehen Bericht erstattet. - The reporter reported on what happened.
+* Die Erzählungen über seine Weltreise haben meine Neugier geweckt. - The stories about his trip around the world have aroused my curiosity.
+
+== Tag 4.12.2020
+
+* Wo warst du so lange? Ich komme gerade von der Uni. - Where have you been so long? I have just come from university.
+* Der Film handelt über einem Paar, das heiraten möchte. - The film is about a couple who want to get married.
+* Können Sie bitte noch dies Formular ausfüllen? - Can you please fill out this form?
+* Ich bin total begeistert von dieser neuen Diät. Ich habe schon zwei Kilo abgenommen. - I am absolutely thrilled with this new diet. I've already lost two pounds.
+* Das Unternehmen hat Insolvenz angemeldet. - The company has filed for bankruptcy.
+* Musst du heute noch viel erledigen? - Do you still have a lot to do today?
+
 == Tag 3.12.2020
 
 * Entschuldigung, was kostet das?
@@ -7,6 +22,8 @@
 * Hast du Lust, dich morgen früh zum Frühstück zu treffen? - Would you like to meet up for breakfast tomorrow morning?
 * Wo findet das heutige Meeting statt ? - Where is today's meeting taking place?
 * Ich möchte mich für einen Kurs anmelden. - I want to register for a course.
+* Mach sofort die Zigarette aus. Hier darf  man nicht rauchen. - Put out the cigarette immediately. It is not allowed to smoke here.
+* Mama hat gesagt, du sollst mir beim Aufräumen helfen! - Mama said you should help me clean up!
 
 == Tag 2.12.2020
 
