--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,10 +1,23 @@
 = DW
 
-== Tag 5.12.2020
+== Tag 6.12.2020
 
+* Ich werde ein Praktikum in Berlin machen und suche für die Zeit noch eine Bleibe. - I'll do an internship in Berlin and look for somewhere to stay around that time.
+* Ich habe im Moment keine Zeit dazu, Sport zu machen. - I don't have time to exercise right now.
+* Wenn ich mehr Zeit hätte, würde ich mehr Sport treiben. - If I had more time, I would do more sports.
+* Ich gehe ihm die Schuld an dem Unfall. - I blame him for the accident
+* Hast du Einfluss auf diese Entscheidung. - Do you have an influence on this decision?
+* Freust du dich auch schon so sehr auf Weihnachten wie ich? - Are you looking forward to Christmas as much as I am?
+
+== Tag 5.12.2020
 
 * Der Reporter hat über das Geschehen Bericht erstattet. - The reporter reported on what happened.
 * Die Erzählungen über seine Weltreise haben meine Neugier geweckt. - The stories about his trip around the world have aroused my curiosity.
+* Lebt deine Urgroßmutter wtwa noch ? Nein, sie lebt nicht mehr - Is your great grandmother wtwa still alive? No, she is no longer alive
+* Wann hast du denn das letzte Mal Urlaub gemacht? - When was the last time you went on vacation?
+* Ich habe mir vorgenommen zwei Wochen auf Zucker zu verzichten. - I have decided to go without sugar for two weeks.
+* Er stand seiner Familie in dieser schweren Stunde bei. - He stood by his family in this difficult hour.
+* Vor dem Umzug muss ich noch viele Sachen aussortieren. - Before moving, I have to sort out a lot of things.
 
 == Tag 4.12.2020
 
