--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,5 +1,28 @@
 = DW
 
+== Tag 20.12.2020
+
+* Was wollen wir heute machen? Ein Ausflug wäre toll, finde ich. - What do we want to do today? I think a trip would be great.
+* Ich habe dir doch schon oft gesagt, dass du mich um Hilfe bitten kannst. - I have told you many times that you can ask me for help.
+* Was hättest du lieber? Kaffee oder Tee? - What would you rather have? Coffee or tea?
+* Es ist ganz schön unordentlich hier. Du solltest doch dein Zimmer aufräumen. - It's pretty messy here. You should clean up your room.
+* Ich muss dringend meine Pflanze umtopfen. Sie hat kaum noch Platz in ihrem Topf. - I urgently need to repot my plant. There is hardly any space left in her pot.
+* Das ist das Gesetz, das das alte ersetzt. Gut, dass es reformiert wurde! - This is the law that replaces the old one. Good thing it was reformed!
+
+== Tag 19.12.2020
+* Mein Handy kann gerade keine Verbindung aufbauen. - My cell phone cannot establish a connection at the moment.
+* Immer wenn wir an der Garderobe anstehen, drängelt sich jemand vor - Whenever we queue in the cloakroom, someone pushes ahead
+* Ob ich wohl morgen früher von der Arbeit nach Hause gehen darf? - Can I go home from work earlier tomorrow?
+* Entschuldigung, hätten Sie kurz Zeit für mich? - Excuse me, would you have a minute to see me?
+* Anja wohnt ziemlich weit außerhalb Kölns. - Anja lives a long way outside of Cologne.
+* Ute läuft jeden Morgen durch den Park zur Bahnhaltestelle. - Every morning Ute walks through the park to the train station.
+* Welche Bedeutung nimmt dieses Wort? - What is the meaning of this word?
+
+== Tag 18.12.2020
+
+*
+
+
 == Tag 6.12.2020
 
 * Ich werde ein Praktikum in Berlin machen und suche für die Zeit noch eine Bleibe. - I'll do an internship in Berlin and look for somewhere to stay around that time.
