--- a/dwlearn/learn/phase/phrase.adoc
+++ b/dwlearn/learn/phase/phrase.adoc
@@ -1,5 +1,17 @@
 = DW
 
+== Tag 22.12.2020
+* Ich habe am Wochenende Plätzchen für die ganze Familie gebacken. - I baked cookies for the whole family on the weekend.
+* Das Klavier muss dringend wieder gestimmt werden - The piano urgently needs to be tuned again
+
+== Tag 21.12.2020
+
+* Hey, das ist meine Zeitschrift! Kauf dir doch eine eigene. - Hey this is my magazine! Buy your own
+* Darf ich Ihnen dieses Gericht hier empfehlen? Es schmeckt wirklich gut. - May I recommend this dish to you? It tastes really good.
+* Du schaust schon den ganzen Tag Fernsehen. Kannst du das Ding nicht mal ausmachen? - You've been watching TV all day. Can't you even turn that thing off?
+* Was wäre dir lieber, Früh- oder Spätschicht?
+* Ich habe so viel zu erledigen. Ich bin komplett überfordert. - I have so much to do. I am completely overwhelmed.
+
 == Tag 20.12.2020
 
 * Was wollen wir heute machen? Ein Ausflug wäre toll, finde ich. - What do we want to do today? I think a trip would be great.
@@ -18,9 +30,7 @@
 * Ute läuft jeden Morgen durch den Park zur Bahnhaltestelle. - Every morning Ute walks through the park to the train station.
 * Welche Bedeutung nimmt dieses Wort? - What is the meaning of this word?
 
-== Tag 18.12.2020
 
-*
 
 
 == Tag 6.12.2020
